Modificar listo. Ajustes en CSS

--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
     </table>
     <div id="editMateria" hidden>
         <input type="button" value="Cancelar" id="btnCancelar", class="btn">
-        <label id="error" hidden></label>
+        <label id="error" hidden>error</label>
         <br>
         <label for="txtNombre">Nombre</label>
         <br>
         <input type="text" name="txtNombre" id="txtNombre">
+        <br>
+        <label for="selectCuatrimestre">Cuatrimestre</label>
+        <select name="selectCuatrimestre" id="selectCuatrimestre" disabled>
+            <option value=1>1</option>
+            <option value=2>2</option>
+            <option value=3>3</option>
+            <option value=4>4</option>
+        </select>      
         <br>
         <label for="dateFecha">Fecha final</label>
         <br>
